--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
              data-status="active">
              <h6><i class="fa fa-bug"></i> </h6>
             <div class="image-box lil-box">
-                <img src="ICON/self.svg">    
+                <img src="self.svg">    
                 <h4></h4>              
                 <h4>HI!  I'M</h4>
                 <h1><span ="logos">CHRISTIAN S. TANJUSAY</span></h1>
