--- a/skills.html
+++ b/skills.html
@@ -43,7 +43,7 @@
              data-status="active">
             <div class="image-box lil-box">
                 
-                <img src="ICON/python.svg">
+                <img src="python.svg">
             </div>
             <div class="script-box lil-box">
                 <div id="up">
@@ -85,7 +85,7 @@ It is an interpreted language, which means that the code is executed on-the-fly 
              data-index="1"
              data-status="inactive">
             <div class="image-box lil-box">
-                <img src="ICON/html.svg">
+                <img src="html.svg">
             </div>
             <div class="script-box lil-box">
                 
@@ -125,7 +125,7 @@ It is an interpreted language, which means that the code is executed on-the-fly 
              data-index="2"
              data-status="inactive">
             <div class="image-box lil-box">
-                <img src="ICON/JavaScript.svg">
+                <img src="JavaScript.svg">
                 <                
             </div>
             <div class="script-box lil-box">
@@ -164,7 +164,7 @@ It is an interpreted language, which means that the code is executed on-the-fly 
              data-index="3" 
              data-status="inactive">
             <div class="image-box lil-box">
-                <img src="ICON/css.svg">
+                <img src="css.svg">
             </div>
             <div class="script-box lil-box">
                 <div id="up">
@@ -202,7 +202,7 @@ It is an interpreted language, which means that the code is executed on-the-fly 
              data-index="4" 
              data-status="inactive">
             <div class="image-box lil-box">
-                <img src="ICON/mysql.svg">
+                <img src="mysql.svg">
             </div>
             <div class="script-box lil-box">
                 <div id="up">
