--- a/skills.html
+++ b/skills.html
@@ -125,7 +125,7 @@ It is an interpreted language, which means that the code is executed on-the-fly 
              data-index="2"
              data-status="inactive">
             <div class="image-box lil-box">
-                <img src="JavaScript.svg">               
+                <img src="javascript.svg">               
             </div>
             <div class="script-box lil-box">
                 <div id="up">
